# ChangeLog for media-sound/alsa-firmware
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-firmware/ChangeLog,v 1.4 2004/01/27 19:17:48 mholzer Exp $

*alsa-firmware-1.0.2 (27 Jan 2004)

  27 Jan 2004; Martin Holzer <mholzer@gentoo.org> alsa-firmware-1.0.2.ebuild:
  Version bumped.

*alsa-firmware-1.0.1 (10 Jan 2004)

  10 Jan 2004; Martin Holzer <mholzer@gentoo.org> alsa-firmware-1.0.1.ebuild:
  VErsion bumped.

*alsa-firmware-1.0.0_rc2 (07 Dec 2003)

  07 Dec 2003; Martin Holzer <mholzer@gentoo.org>
  alsa-firmware-1.0.0_rc2.ebuild:
  Version bumped.

*alsa-firmware-1.0.0_rc1 (02 Dec 2003)

  02 Dec 2003; Martin Holzer <mholzer@gentoo.org>
  alsa-firmware-1.0.0_rc1.ebuild:
  Inital ebuild.
