@@ -1,0 +1,1 @@
+MD5 69c6d64ba17302915b5e358472bb1a7b alsa-firmware-1.0.3.tar.bz2 1031166
