@@ -1,24 +1,23 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/alsa-utils-1.0.0_rc2.ebuild,v 1.4 2004/03/01 08:47:29 mholzer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/alsa-utils-1.0.3.ebuild,v 1.1 2004/03/01 08:47:29 mholzer Exp $
 
 DESCRIPTION="Advanced Linux Sound Architecture Utils (alsactl, alsamixer, etc.)"
 HOMEPAGE="http://www.alsa-project.org/"
 DEPEND=">=sys-libs/ncurses-5.1
-	>=media-libs/alsa-lib-1.0.0_rc2"
+	>=media-libs/alsa-lib-1.0.3"
 
 SLOT="0.9"
 LICENSE="GPL-2"
-KEYWORDS="~x86 ~ppc ~amd64 ppc64"
+KEYWORDS="~x86 ~ppc ~amd64 ~ppc64"
 
 MY_P=${P/_rc/rc}
-SRC_URI="ftp://ftp.alsa-project.org/pub/utils/${MY_P}.tar.bz2"
-#SRC_URI="mirror://alsaproject/utils/${P}.tar.bz2"
-#RESTRICT="nomirror"
+#SRC_URI="ftp://ftp.alsa-project.org/pub/utils/${MY_P}.tar.bz2"
+SRC_URI="mirror://alsaproject/utils/${P}.tar.bz2"
+RESTRICT="nomirror"
 S=${WORKDIR}/${MY_P}
 
 src_compile() {
-
 	econf || die "./configure failed"
 	emake || die "Parallel Make Failed"
 }
