@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/alsa-firmware
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-firmware/ChangeLog,v 1.4 2004/01/27 19:17:48 mholzer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-firmware/ChangeLog,v 1.5 2004/03/01 08:44:15 mholzer Exp $
+
+*alsa-firmware-1.0.3 (01 Mar 2004)
+
+  01 Mar 2004; Martin Holzer <mholzer@gentoo.org> alsa-firmware-1.0.3.ebuild:
+  Version bumped.
 
 *alsa-firmware-1.0.2 (27 Jan 2004)
 
